# blatt-7-aufgabe-1-create-a-new-team

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  doxyfile.in
avl_tree/: avl_tree.cpp  avl_tree.h
html/: annotated.html  avl__tree_8h_source.html  classAVLTreeTest.html  classavl__tree-members.html  classavl__tree.html  classes.html  dir_0c517e81dc564be1123ee64402504092.html  dir_13e138d54eb8818da29c3992edef070a.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  structavl__tree_1_1node-members.html  structavl__tree_1_1node.html  test__avl__tree_8h_source.html
html/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  search.js  variables_0.js  variables_1.js
latex/: annotated.tex  classAVLTreeTest.eps  classAVLTreeTest.tex  classavl__tree.tex  dir_0c517e81dc564be1123ee64402504092.tex  dir_13e138d54eb8818da29c3992edef070a.tex  hierarchy.tex  refman.tex  structavl__tree_1_1node.tex
test/: CMakeLists.txt  test_avl_tree.cpp  test_avl_tree.h
